solve https and z-index positioning itens

--- a/src/less/app/common/loading-bar.less
+++ b/src/less/app/common/loading-bar.less
@@ -85,7 +85,7 @@
 #loading-bar-spinner {
   display: block;
   position: fixed;
-  z-index: 90002;
+  z-index: 1049;
   top: 10px;
   left: 10px;
 }
