--- a/src/less/app/common/settings.less
+++ b/src/less/app/common/settings.less
@@ -11,7 +11,7 @@
   width: 250px;
   top: @header-hg + 50;
   right: -254px;
-  z-index: 3001;
+  z-index: 1049;
   .transition(right .3s @easeInOutQuint);
   > .settings-inner {
     position: relative;
