--- a/src/less/app/components/scrollable.less
+++ b/src/less/app/components/scrollable.less
@@ -49,7 +49,7 @@ scrollable {
     width: 100%;
     background: 100px;
     box-shadow: 0 -15px 15px #ffffff inset;
-    z-index: 9999;
+    z-index: 1049;
     overflow: visible;
   }
 }
