--- a/src/less/app/layout/header.less
+++ b/src/less/app/layout/header.less
@@ -86,7 +86,7 @@
   .menu-toggle {
     font-size: 24px;
     color: white;
-    z-index: 3001;
+    z-index: 1049;
   }
   .sidebar-toggle {
     float: left;
