--- a/src/less/app/ui/alerts.less
+++ b/src/less/app/ui/alerts.less
@@ -6,7 +6,7 @@
 // ========================================================================
 
 @alerts-position:                               60px;
-@alerts-z-index:                                9090;
+@alerts-z-index:                                1049;
 @alerts-width:                                  350px;
 
 // Message container for positioning
